# darling-DirectoryService

./: CMakeLists.txt  README.md
include/: CAuditUtils.h  CHandlers.h  CInternalDispatch.h  CLauncher.h  CNodeList.h  CPlugInList.h  CPluginConfig.h  CPluginHandler.h  CRefTable.h  CServerPlugin.h  CSrvrMessaging.h  DSMachEndian.h  DSSwapUtils.h  DSlibinfoMIG_types.h  DSmemberdMIG_types.h  DirServiceMain.h  Mbrd_Cache.h  Mbrd_HashTable.h  Mbrd_MembershipResolver.h  Mbrd_UserGroup.h  ServerControl.h  od_passthru.h  rb.h
include/DirectoryService/: README.md
